<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        fontFamily="@font/montserratmedium"
        android:fontFamily="@font/montserratmedium"
        app:fontFamily="@font/montserratmedium"
        app:titleTextColor="@color/colorAccent">
    </android.support.v7.widget.Toolbar>


    <Button
        android:id="@+id/button_myaddy"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="128dp"
        android:layout_marginTop="59dp"
        android:background="#ffffff"
        android:contentDescription="@string/button_myaddress"
        android:contextClickable="true"
        android:fontFamily="@font/montserratmedium"
        android:text="@string/button_myaddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        android:textColor="@color/colorAccent"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        fontFamily="@font/montserratmedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:clickable="false"
        android:focusable="auto"
        android:measureAllChildren="false"
        android:textColorHighlight="#4bd66e"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/excrow"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:contentDescription="@string/exceed_logo"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/exceedrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="49dp"
            android:layout_marginTop="46dp"
            android:fontFamily="@font/montserratmediumitalic"
            android:text="@string/exceed_table"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.403"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/excbal"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exceed_balance_description"
            android:ems="10"
            android:fontFamily="@font/montserratmedium"
            android:inputType="numberDecimal"
            android:text="@string/exceed_balance_user"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/exceedrow"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/excloogo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/exceedrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/ethrow"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/excrow"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/ethlogo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/ethereum_logo_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ethlogo" />

        <TextView
            android:id="@+id/etherrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/ethereum"
            android:fontFamily="@font/montserratmediumitalic"
            android:text="@string/ethereum_table"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ethlogo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ethbal"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="46dp"
            android:contentDescription="@string/ethereum_balance_description"
            android:ems="10"
            android:fontFamily="@font/montserratmedium"
            android:inputType="numberDecimal"
            android:text="@string/ethereum_balance"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/ethlogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.129" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/bitcoin_table"
        android:layout_width="0dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ethrow"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/bitcoinlogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:contentDescription="@string/bitcoin_logo_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bitcoin" />

        <TextView
            android:id="@+id/bitcoinstring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/bitcoin_table_description"
            android:fontFamily="@font/montserratmediumitalic"
            android:text="@string/bitcoin_table"
            android:textAlignment="viewStart"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.371"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btc_balance"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="57dp"
            android:contentDescription="@string/bitcoin_balance_description"
            android:ems="10"
            android:fontFamily="@font/montserratmedium"
            android:inputType="numberDecimal"
            android:text="@string/bitcoin_balance_user"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/bitcoinstring"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/bitcoinlogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.103" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>