<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_text_send"
        fontFamily="@font/montserratmedium"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/montserratmedium"
        android:text="@string/confirm_send_btc"
        android:textAlignment="center"
        app:fontFamily="@font/montserratmedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/confirm_send_btc"
        app:titleTextColor="@color/colorAccent"></android.support.v7.widget.Toolbar>

    <ImageButton
        android:id="@+id/btc_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="400dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/bitcoin_logo_description"
        android:scaleX="1.25"
        android:scaleY="1.25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_btc_recover"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bitcoin" />

    <TextView
        android:id="@+id/btc_text"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/paragraph_send_btc"
        android:fontFamily="@font/montserratregular"
        android:text="@string/paragraph_send_btc"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btc_image_button"
        app:layout_constraintVertical_bias="0.321" />

    <TextView
        android:id="@+id/btc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bitcoin"
        android:fontFamily="@font/montserratmediumitalic"
        android:text="@string/bitcoin_table"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btc_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btc_image_button"
        app:layout_constraintVertical_bias="0.32" />

    <EditText
        android:id="@+id/edit_btc_send_amount"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/btc_amount_send"
        android:ems="10"
        android:fontFamily="@font/montserratthinitalic"
        android:hint="@string/btc_amount_send"
        android:inputType="numberDecimal"
        android:textColor="@android:color/holo_orange_dark"
        android:textColorLink="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btc_text"
        app:layout_constraintVertical_bias="0.64" />

    <Button
        android:id="@+id/button_confirm_btc"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/confirm_send_btc"
        android:fontFamily="@font/montserratregular"
        android:text="@string/button_send_btc"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toEndOf="@+id/edit_btc_send_amount"
        app:layout_constraintTop_toBottomOf="@+id/btc_text"
        app:layout_constraintVertical_bias="0.503" />

</android.support.constraint.ConstraintLayout>