<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/exceed_toolbar_send"
        fontFamily="@font/montserratmedium"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/montserratmedium"
        app:fontFamily="@font/montserratmedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/confirm_send_exc"
        app:titleTextColor="@color/colorAccent"></android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/exc_logo3"
        android:layout_width="81dp"
        android:layout_height="81dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exceed_toolbar_send"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_launcher55" />

    <TextView
        android:id="@+id/exceed_paragraph_send"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/title_send_exc"
        android:fontFamily="@font/montserratregular"
        android:text="@string/paragraph_exc_send"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exc_logo3"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/title_send_exc_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/confirm_send_exc"
        android:fontFamily="@font/montserratmediumitalic"
        android:text="@string/confirm_send_exc"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/exceed_paragraph_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exc_logo3"
        app:layout_constraintVertical_bias="0.32" />

    <EditText
        android:id="@+id/amount_send_exc"
        android:layout_width="221dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/amount_in_exc"
        android:ems="10"
        android:fontFamily="@font/montserratregular"
        android:inputType="numberDecimal"
        android:text="@string/amount_in_exc"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exceed_paragraph_send"
        app:layout_constraintVertical_bias="0.807" />

    <Button
        android:id="@+id/exc_send_button"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/montserratregular"
        android:text="@string/button_exceed_send_title"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toEndOf="@+id/amount_send_exc"
        app:layout_constraintTop_toBottomOf="@+id/exceed_paragraph_send"
        app:layout_constraintVertical_bias="0.709" />

    <EditText
        android:id="@+id/address_exc_window"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/exceed_address_content"
        android:ems="10"
        android:fontFamily="@font/montserratregular"
        android:inputType="textPersonName"
        android:text="@string/eth_address_friend"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/amount_send_exc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exceed_paragraph_send"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>